--- a/Python/Django/myproject/myproject/templates/topics.html
+++ b/Python/Django/myproject/myproject/templates/topics.html
@@ -13,7 +13,7 @@
   <div class="mb-4">
     <a href="{% url 'new_topic' board.pk %}" class="btn btn-primary">New topic</a>
   </div>
-  <table class="table">
+  <table class="table mb-4">
     <thead class="thead-inverse">
       <tr>
         <th>Topic</th>
@@ -23,7 +23,7 @@
         <th>Last Update</th>
       </tr>
     </thead>
-    {% for topic in board.topics.all %}
+    {% for topic in topics %}
       <tr>
         <td><a href="{% url 'topic_posts' board.pk topic.pk %}">{{ topic.subject }}</a></td>
         <td>{{ topic.starter.username }}</td>
@@ -34,4 +34,7 @@
     {% endfor %}
     </tbody>
   </table>
+
+  {% include 'includes/pagination.html' %}
+
 {% endblock %}
